--- a/en/Whats_New_3.html
+++ b/en/Whats_New_3.html
@@ -557,7 +557,7 @@ conemuc -guimacro setoption FarGotoEditorPath @&quot;#notepad &quot;&quot;%3&quo
 <ul><li>Fix attaching (<code>Win+G</code> from ConEmu) of <code>*.vshost.exe</code> console. </li>
 <li><a href="GuiMacro.html">GuiMacro</a>. <code>PasteFile</code> able to skip lines started with <code>&quot;&lt;CommentMark&gt;&quot;</code> prefix. </li><pre class="prettyprint">PasteFile(&lt;Cmd&gt;[,&quot;&lt;File&gt;&quot;[,&quot;&lt;CommentMark&gt;&quot;]])</pre>
 <li><a title="No duplicate root confirmation dialog" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/1620">Issue 1620&nbsp;</a>: Support PuTTY&#x27;s duplicate session in ‘Duplicate root’ function. </li>
-<li><code>GitShowBranch.cmd</code>: drop remote name from branch name (drop tail after first ‘.’). </li>
+<li><code>GitShowBranch.cmd</code>: drop remote name from branch name (drop tail after first ’.’). </li>
 <li>When reopening About dialog, show last selected section. </li>
 <li>Search in about dialog was on first page with found text. </li>
 <li>Update confirmation dialogs was not visible if ConEmu was ‘Always on top’. </li>
@@ -729,7 +729,7 @@ powershell -new_console:C:twice.ico</pre>
 <li>Allow &quot;/icon&quot; task parameter to change tab icon too. </li>
 <li>Restrict &quot;/icon&quot; task parameter to change already started instance window icon. </li>
 <li>New ConEmu.exe switch ‘<code>/FontDir &quot;YourDir&quot;</code>’ allows to register fonts from several specified folders </li>
-<li><a title="ctrl+backspace delete words to the left including spaces" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/1258">Issue 1258&nbsp;</a>: <code>Ctrl+BackSpace</code> delete words to the left including spaces. </li><blockquote>Actually, not only spaces are taken to account: ‘<code>&gt;])}$.,/\&quot;</code>’. 
+<li><a title="ctrl+backspace delete words to the left including spaces" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/1258">Issue 1258&nbsp;</a>: <code>Ctrl+BackSpace</code> delete words to the left including spaces. </li><blockquote>Actually, not only spaces are taken to account: ‘<code>&gt;])}$.,/\&quot;</code>’.
 </blockquote><li>About dialog <code>-new_console</code> fixes. </li>
 <li>No need to unset hooks if our process is to be force killed by TerminateProcess (minor speed up). </li>
 <li><a title="Как сбросить ConEmu на default." class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/1512">Issue 1512&nbsp;</a>: Warn on invalid prefix-switch in task command. Valid switches currently are </li><pre class="prettyprint">/bufferheight &lt;lines&gt;
