Make Github the primary download mirror

--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -29,9 +29,8 @@ Read more about <a href="VersionComparison.html#release-stages">release stages</
 
 <h3><a name="Official_mirrors"></a>Official mirrors<a href="#Official_mirrors" class="section_anchor"></a></h3>
 <ul>
-	<li><a href="{{ site.fosshub }}" rel="nofollow" target="_blank">Fosshub.com</a> </li>
+	<li><a href="{{ site.github }}" rel="nofollow" target="_blank">GitHub.com</a> </li>
 	<li><a href="https://sourceforge.net/projects/conemu/files/" rel="nofollow" target="_blank">Sourceforge.com</a> </li>
-	<li><a href="https://github.com/Maximus5/ConEmu/releases" rel="nofollow" target="_blank">GitHub.com</a> </li>
 </ul>
 
 
@@ -48,7 +47,7 @@ Read more about <a href="VersionComparison.html#release-stages">release stages</
 <p>Searching for some old (exact) ConEmu build? All builds are available here: </p>
 <ul>
 	<li><a href="https://sourceforge.net/projects/conemu/files/OldReleases/ConEmuPack/" rel="nofollow" target="_blank">Release archives (sourceforge)</a> </li>
-	<li><a href="https://www.fosshub.com/ConEmu-old.html" rel="nofollow" target="_blank">Release archives (oldfoss)</a> </li>
+	<li><a href="{{ site.github }}" rel="nofollow" target="_blank">Release archives (github)</a> </li>
 </ul>
 
 <h2><a name="Far_Manager_related"></a>Far Manager related<a href="#Far_Manager_related" class="section_anchor"></a></h2>
